--- a/LocalAuthenticationSample/Base.lproj/Main.storyboard
+++ b/LocalAuthenticationSample/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16085" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16078.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,79 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="LocalAuthenticationSample" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4DJ-pw-klZ">
+                                <rect key="frame" x="16" y="431" width="382" height="44"/>
+                                <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="LkI-cd-2yl"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                <state key="normal" title="ログイン">
+                                    <color key="titleColor" cocoaTouchSystemColor="lightTextColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="didTabLoginButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="F2a-1o-wLO"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Face ID でログイン" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qay-nb-M1K">
+                                <rect key="frame" x="16" y="290" width="382" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login Status" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aPW-wj-EQs">
+                                <rect key="frame" x="16" y="261" width="382" height="21"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EIH-oQ-akZ">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rWX-OM-yIL">
+                                <rect key="frame" x="0.0" y="44" width="414" height="0.0"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" id="kNt-PT-XYS"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4DJ-pw-klZ" secondAttribute="trailing" constant="16" id="2Qw-ts-gf8"/>
+                            <constraint firstItem="EIH-oQ-akZ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="6WV-4s-4md"/>
+                            <constraint firstItem="Qay-nb-M1K" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="8wW-JO-ElG"/>
+                            <constraint firstItem="4DJ-pw-klZ" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="FLz-Mp-NPL"/>
+                            <constraint firstItem="4DJ-pw-klZ" firstAttribute="top" secondItem="Qay-nb-M1K" secondAttribute="bottom" constant="120" id="SYF-XD-TYt"/>
+                            <constraint firstItem="rWX-OM-yIL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="W24-RW-nGT"/>
+                            <constraint firstItem="Qay-nb-M1K" firstAttribute="top" secondItem="aPW-wj-EQs" secondAttribute="bottom" constant="8" id="Y1Y-BP-aBY"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Qay-nb-M1K" secondAttribute="trailing" constant="16" id="dKb-7F-Jnm"/>
+                            <constraint firstItem="4DJ-pw-klZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="eJm-Db-4AH"/>
+                            <constraint firstItem="EIH-oQ-akZ" firstAttribute="bottom" secondItem="rWX-OM-yIL" secondAttribute="bottom" id="gto-Z2-5eb"/>
+                            <constraint firstItem="rWX-OM-yIL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="hFb-XJ-Sgi"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="rWX-OM-yIL" secondAttribute="trailing" id="jE5-zt-a43"/>
+                            <constraint firstItem="aPW-wj-EQs" firstAttribute="leading" secondItem="Qay-nb-M1K" secondAttribute="leading" id="kqX-qW-cH9"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EIH-oQ-akZ" secondAttribute="trailing" id="q1a-Gd-5q1"/>
+                            <constraint firstItem="EIH-oQ-akZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="yhc-VM-4Po"/>
+                            <constraint firstItem="aPW-wj-EQs" firstAttribute="trailing" secondItem="Qay-nb-M1K" secondAttribute="trailing" id="zJh-6u-AMA"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="button" destination="4DJ-pw-klZ" id="FBh-YM-7b3"/>
+                        <outlet property="faceIdDescriptionLabel" destination="Qay-nb-M1K" id="5eC-dj-Udg"/>
+                        <outlet property="headerView" destination="EIH-oQ-akZ" id="Nb1-Z2-OF1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="139" y="130"/>
         </scene>
     </scenes>
 </document>
